--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cloud_firestore: 4.3.1
   flutter: 
     sdk: flutter
+  image_picker: ^0.8.6+1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
