--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: 4.2.5
   google_sign_in: 5.4.3
   cloud_firestore: 4.3.1
+  firebase_storage: ^11.0.10
   flutter: 
     sdk: flutter
   image_picker: ^0.8.6+1
